# pydanticx

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
src/pydanticx/: __init__.py
tests/: test_import.py
